--- a/workflows/nuevo_cliente.yaml
+++ b/workflows/nuevo_cliente.yaml
@@ -2,9 +2,13 @@ name: Nuevo Cliente
   
 on: 
   push:
+  
 jobs:
   notificar:
-    runs-on:ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
-      -name:Notificacion
-      run echo"Se ha creado un nuevo cliente. Notificacion del equipo de AXA"
+      - name: Checkout del repositorio
+        uses: actions/checkout@v3
+        
+      - name: Notificacion
+        run: echo"Se ha creado un nuevo cliente. Notificacion del equipo de AXA"
